Prevent internal server error when no members are passed to createGroupHandler and change createGroupHandler response to 204 update Swagger docs to reflect handler changes
