# internal/docs/swagger.yaml
@@ -108,10 +108,8 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/GroupWithMembers'
+        "204":
+          description: No Content
         "400":
           description: Bad Request
           schema: {}
